--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,18 @@
 :root {
   --c-bg: #fff;
-  font-family: system-ui, -apple-system, Arial, Helvetica, sans-serif;
+  --c-bg-nprogress: #4ade80;
+}
+
+* {
+  transition: background-color 0.4s ease-in-out;
 }
 
 html {
   background-color: var(--c-bg);
-  overflow-x: hidden;
-  overflow-y: scroll;
 
   &.dark {
-    --c-bg: #050505;
+    --c-bg: #000;
+    // --c-bg-nprogress: #fff;
   }
 }
 
@@ -19,15 +22,73 @@ body {
 
 a {
   color: inherit;
-  opacity: 0.8;
   text-decoration: none;
+}
 
-  &:hover {
-    opacity: 1;
+h1 {
+  font-size: 1.8rem;
+  line-height: 1.3;
+}
+
+h2 {
+  font-size: 1.4rem;
+  line-height: 1.2;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+h4,
+h5,
+h6 {
+  font-size: 1.2rem;
+}
+
+pre,
+code {
+  font-family: "JetBrains Mono", monospace;
+}
+
+#app {
+  width: 100%;
+  min-width: 350px;
+
+  overflow-x: hidden;
+}
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
+::view-transition-old(root) {
+  z-index: 1;
+}
+::view-transition-new(root) {
+  z-index: 9999;
+}
+
+html.dark {
+  &::view-transition-old(root) {
+    z-index: 9999;
+  }
+
+  &::view-transition-new(root) {
+    z-index: 1;
   }
 }
 
-#root {
-  width: 100vw;
-  min-width: 300px;
+#nprogress {
+  pointer-events: none;
+
+  .bar {
+    background-color: var(--c-bg-nprogress);
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+  }
 }
